[gd_scene load_steps=17 format=2]

[ext_resource path="res://scenes/bg.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/door.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/pi.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/blocks.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/img/block.png" type="Texture" id=5]
[ext_resource path="res://assets/img/button.png" type="Texture" id=6]
[ext_resource path="res://scripts/Fase8.gd" type="Script" id=7]
[ext_resource path="res://scenes/fases/song.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 72, 12 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1.90977, 5.02248 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 12, 72 )

[sub_resource type="Animation" id=4]
resource_name = "1_move"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("plataformas/p1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 192, 240 ), Vector2( 192, 312 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("plataformas/p2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 696, 144 ), Vector2( 696, 312 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("paredes/pd2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 888, 144 ), Vector2( 888, 312 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("paredes/pd1:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 120, 456 ), Vector2( 120, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "2_move"
tracks/0/type = "value"
tracks/0/path = NodePath("paredes/pd1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 120, 0 ), Vector2( 120, 144 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("paredes/pd2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 888, 312 ), Vector2( 888, 456 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("plataformas/p1:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 192, 312 ), Vector2( 192, 528 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("plataformas/p2:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 696, 312 ), Vector2( 696, 456 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "3_move"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("plataformas/p1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 192, 504 ), Vector2( 192, 144 ) ]
}

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath("paredes/pd1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 120, 144 ), Vector2( 120, 312 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("plataformas/p1:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 192, 528 ), Vector2( 192, 504 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "6_move"
tracks/0/type = "value"
tracks/0/path = NodePath("plataformas/p2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 696, 456 ), Vector2( 696, 528 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("paredes/pd2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 888, 456 ), Vector2( 888, 144 ) ]
}

[node name="Fase8" type="Node2D"]
position = Vector2( 0, -0.445953 )
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="bg" parent="." instance=ExtResource( 1 )]

[node name="real_blocks" parent="." instance=ExtResource( 4 )]
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 24, 0, 0, 25, 0, 0, 26, 0, 0, 27, 0, 0, 28, 0, 0, 29, 0, 0, 30, 0, 0, 31, 0, 0, 32, 0, 0, 33, 0, 0, 34, 0, 0, 35, 0, 0, 36, 0, 0, 37, 0, 0, 38, 0, 0, 39, 0, 0, 40, 0, 0, 41, 0, 0, 42, 0, 0, 65536, 0, 0, 65578, 0, 0, 131072, 0, 0, 131114, 0, 0, 196608, 0, 0, 196650, 0, 0, 262144, 0, 0, 262186, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327718, 0, 0, 327719, 0, 0, 327720, 0, 0, 327721, 0, 0, 327722, 0, 0, 393216, 0, 0, 393258, 0, 0, 458752, 0, 0, 458794, 0, 0, 524288, 0, 0, 524305, 0, 0, 524306, 0, 0, 524307, 0, 0, 524308, 0, 0, 524309, 0, 0, 524310, 0, 0, 524311, 0, 0, 524312, 0, 0, 524313, 0, 0, 524330, 0, 0, 589824, 0, 0, 589866, 0, 0, 655360, 0, 0, 655402, 0, 0, 720896, 0, 0, 720938, 0, 0, 786432, 0, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786470, 0, 0, 786471, 0, 0, 786472, 0, 0, 786473, 0, 0, 786474, 0, 0, 851968, 0, 0, 852010, 0, 0, 917504, 0, 0, 917546, 0, 0, 983040, 0, 0, 983057, 0, 0, 983058, 0, 0, 983059, 0, 0, 983060, 0, 0, 983061, 0, 0, 983062, 0, 0, 983063, 0, 0, 983064, 0, 0, 983065, 0, 0, 983082, 0, 0, 1048576, 0, 0, 1048618, 0, 0, 1114112, 0, 0, 1114154, 0, 0, 1179648, 0, 0, 1179690, 0, 0, 1245184, 0, 0, 1245185, 0, 0, 1245186, 0, 0, 1245187, 0, 0, 1245188, 0, 0, 1245222, 0, 0, 1245223, 0, 0, 1245224, 0, 0, 1245225, 0, 0, 1245226, 0, 0, 1310720, 0, 0, 1310762, 0, 0, 1376256, 0, 0, 1376298, 0, 0, 1441792, 0, 0, 1441809, 0, 0, 1441810, 0, 0, 1441811, 0, 0, 1441812, 0, 0, 1441813, 0, 0, 1441814, 0, 0, 1441815, 0, 0, 1441816, 0, 0, 1441817, 0, 0, 1441834, 0, 0, 1507328, 0, 0, 1507370, 0, 0, 1572864, 0, 0, 1572865, 0, 0, 1572866, 0, 0, 1572867, 0, 0, 1572868, 0, 0, 1572902, 0, 0, 1572903, 0, 0, 1572904, 0, 0, 1572905, 0, 0, 1572906, 0, 0 )

[node name="door" parent="." instance=ExtResource( 2 )]
position = Vector2( 987.226, 544.155 )
local = "res://scenes/fases/Fase5.tscn"

[node name="pi" parent="." instance=ExtResource( 3 )]
position = Vector2( 978.787, 85.3071 )
jump = -650
flip = true

[node name="plataformas" type="Node" parent="."]

[node name="p1" type="StaticBody2D" parent="plataformas"]
position = Vector2( 192, 240 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="plataformas/p1"]
scale = Vector2( 6, 1 )
texture = ExtResource( 5 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="plataformas/p1"]
position = Vector2( 72, 12 )
shape = SubResource( 1 )

[node name="p2" type="StaticBody2D" parent="plataformas"]
position = Vector2( 696, 144 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="plataformas/p2"]
scale = Vector2( 6, 1 )
texture = ExtResource( 5 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="plataformas/p2"]
position = Vector2( 72, 12 )
shape = SubResource( 1 )

[node name="botoes" type="Node" parent="."]

[node name="b1" type="Area2D" parent="botoes"]
position = Vector2( 25.3745, 264.38 )
rotation = 3.14159
scale = Vector2( 1.5, 1.5 )

[node name="Sprite" type="Sprite" parent="botoes/b1"]
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="botoes/b1"]
position = Vector2( -2.27931, 0 )
shape = SubResource( 2 )

[node name="b2" type="Area2D" parent="botoes"]
position = Vector2( 1006.78, 262.923 )
scale = Vector2( 1.5, 1.5 )

[node name="Sprite" type="Sprite" parent="botoes/b2"]
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="botoes/b2"]
position = Vector2( -2.27931, 0 )
shape = SubResource( 2 )

[node name="b3" type="Area2D" parent="botoes"]
position = Vector2( 24, 432 )
rotation = 3.14159
scale = Vector2( 1.5, 1.5 )

[node name="Sprite" type="Sprite" parent="botoes/b3"]
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="botoes/b3"]
position = Vector2( -2.27931, 0 )
shape = SubResource( 2 )

[node name="b4" type="Area2D" parent="botoes"]
position = Vector2( 25.1627, 555.84 )
rotation = 3.14159
scale = Vector2( 1.5, 1.5 )

[node name="Sprite" type="Sprite" parent="botoes/b4"]
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="botoes/b4"]
position = Vector2( -2.27931, 0 )
shape = SubResource( 2 )

[node name="b5" type="Area2D" parent="botoes"]
position = Vector2( 1006.78, 433.74 )
scale = Vector2( 1.5, 1.5 )

[node name="Sprite" type="Sprite" parent="botoes/b5"]
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="botoes/b5"]
position = Vector2( -2.27931, 0 )
shape = SubResource( 2 )

[node name="b6" type="Area2D" parent="botoes"]
position = Vector2( 24, 96 )
rotation = 3.14159
scale = Vector2( 1.5, 1.5 )

[node name="Sprite" type="Sprite" parent="botoes/b6"]
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="botoes/b6"]
position = Vector2( -2.27931, 0 )
shape = SubResource( 2 )

[node name="paredes" type="Node" parent="."]

[node name="pd1" type="StaticBody2D" parent="paredes"]
position = Vector2( 120, 456 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="paredes/pd1"]
scale = Vector2( 1, 6 )
texture = ExtResource( 5 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="paredes/pd1"]
position = Vector2( 12, 72 )
shape = SubResource( 3 )

[node name="pd2" type="StaticBody2D" parent="paredes"]
position = Vector2( 888, 144 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="paredes/pd2"]
scale = Vector2( 1, 6 )
texture = ExtResource( 5 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="paredes/pd2"]
position = Vector2( 12, 72 )
shape = SubResource( 3 )

[node name="anim" type="AnimationPlayer" parent="."]
anims/1_move = SubResource( 4 )
anims/2_move = SubResource( 5 )
anims/3_move = SubResource( 6 )
anims/4_move = SubResource( 7 )
anims/6_move = SubResource( 8 )

[node name="song" parent="." instance=ExtResource( 8 )]
[connection signal="body_entered" from="botoes/b1" to="." method="_on_b1_body_entered"]
[connection signal="body_entered" from="botoes/b2" to="." method="_on_b2_body_entered"]
[connection signal="body_entered" from="botoes/b3" to="." method="_on_b3_body_entered"]
[connection signal="body_entered" from="botoes/b4" to="." method="_on_b4_body_entered"]
[connection signal="body_entered" from="botoes/b5" to="." method="_on_b5_body_entered"]
[connection signal="body_entered" from="botoes/b6" to="." method="_on_b6_body_entered"]
